# gib-bot

./: .env.example  .gitattributes  .gitignore  CHANGES.md  LICENSE  README.md  cli.py  pyproject.toml  setup.bat  setup.sh
gib/: __init__.py  binder.py  cnft.py  config.py  decks.py  deposit.py  discover.py  pdas.py  registercard.py  rpc.py  score.py  sign_server.py  tx.py  txbuilder.py
tests/: test_pdas.py  test_tx.py
