[project]
name = "gib-bot"
version = "0.1.0"
description = "Local tool for auto-submitting gib.meme tournament decks."
requires-python = ">=3.10"

dependencies = [
    "solders>=0.21",   # Solana primitives (v0 tx, pubkey, keypair serialization)
    "httpx>=0.27",     # HTTP client for RPC + gib.meme APIs
    "aiohttp>=3.9",    # Tiny localhost server for the Phantom signing bridge
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gib"]
